// file: proto/gcommon/v2/config/v2/config_diff.proto
// version: 1.0.0
// guid: 1d9db67e-5b10-4366-8b2b-b962194a0951

edition = "2023";

package config.v2;

import "config/v2/config_diff_entry.proto";
import "google/protobuf/go_features.proto";
import "google/protobuf/timestamp.proto";
import "buf/validate/validate.proto";


option features.(pb.go).api_level = API_OPAQUE;
option go_package = "github.com/jdfalk/gcommon/config/v2";

message ConfigDiff {
  // Unique identifier for this diff
  string diff_id = 1 [(buf.validate.field).string.min_len = 1];

  // Source configuration version/snapshot
  string source_version = 2 [(buf.validate.field).string.pattern = "^v?\\d+\\.\\d+\\.\\d+"];

  // Target configuration version/snapshot
  string target_version = 3 [(buf.validate.field).string.pattern = "^v?\\d+\\.\\d+\\.\\d+"];

  // List of added configuration keys
  repeated ConfigDiffEntry added = 4 [(buf.validate.field).repeated.min_items = 1];

  // List of modified configuration keys
  repeated ConfigDiffEntry modified = 5 [(buf.validate.field).repeated.min_items = 1];

  // List of removed configuration keys
  repeated ConfigDiffEntry removed = 6 [(buf.validate.field).repeated.min_items = 1];

  // Timestamp when diff was computed
  google.protobuf.Timestamp computed_at = 7;

  // User or service that requested the diff
  string requested_by = 8 [(buf.validate.field).string.min_len = 1];

  // Additional metadata
  map<string, string> metadata = 9;
}
